--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>User</th>
-      <th>Post</th>
+      <th>Post Title</th>
       <th>Comment entry</th>
       <th colspan="3"></th>
     </tr>
@@ -15,9 +15,9 @@
   <tbody>
     <% @comments.each do |comment| %>
       <tr>
-        <td><%= comment.user_id %></td>
-        <td><%= comment.post_id %></td>
-        <td><%= comment.comment_entry %></td>
+        <td><%= comment.user.username %></td>
+        <td><%= comment.post.title %></td>
+        <td><%= comment.comment_entry.html_safe %></td>
         <td><%= link_to 'Show', comment %></td>
         <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
         <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
