--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -2,17 +2,17 @@
 
 <p>
   <strong>User:</strong>
-  <%= @comment.user_id %>
+  <%= @comment.user.username %>
 </p>
 
 <p>
   <strong>Post:</strong>
-  <%= @comment.post_id %>
+  <%= @comment.post.blog_entry.html_safe %>
 </p>
 
 <p>
   <strong>Comment entry:</strong>
-  <%= @comment.comment_entry %>
+  <%= @comment.comment_entry.html_safe %>
 </p>
 
 <%= link_to 'Edit', edit_comment_path(@comment) %> |
