--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WildlifeBlog</title>
+    <title>Amazing Animals</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -19,13 +19,14 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="#">Brand</a>
+		      <ul class="nav navbar-nav navbar-left">
+		      	<i class="fa fa-paw fa-lg"></i> <%= link_to " Amazing Animals", root_path %>
+		      </ul>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
 		        <li><a href="#">Link</a></li>
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -40,44 +41,48 @@
 		          </ul>
 		        </li>
 		      </ul>
-		      <form class="navbar-form navbar-left">
-		        <div class="form-group">
-		          <input type="text" class="form-control" placeholder="Search">
-		        </div>
-		        <button type="submit" class="btn btn-default">Submit</button>
-		      </form>
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="#">Link</a></li>
+		        <li><a href="#">Mission</a></li>
+		        <% if user_signed_in? %>
 		        <li class="dropdown">
-		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+		          <% if current_user.avatar.blank? == false %>
+		          	<%= image_tag current_user.avatar.thumb, class: "user-pic-nav" %>
+		          <% end %>
+		          <%= current_user.username %> <span class="caret"></span></a>
 		          <ul class="dropdown-menu">
-		            <li><a href="#">Action</a></li>
-		            <li><a href="#">Another action</a></li>
-		            <li><a href="#">Something else here</a></li>
+		            <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+		            <li>Submit Blog</li>
+		            <li>Configure Feed</li>
 		            <li role="separator" class="divider"></li>
-		            <li><a href="#">Separated link</a></li>
+		            <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
 		          </ul>
 		        </li>
+		        <% else %>
+		        	<li><%= link_to "Sign In", new_user_session_path %></li>
+		        <% end %>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
-	
-	   	 <%= yield %>
-  	</body>
-  <div class="footer">
-  	<div class="row">
-  		<div class="col-md-2">
-  		</div>
-  		<div class="col-md-3">
-  			<p>Contact us</p>
-  		</div>
-  		<div class="col-md-3">
-  			<p>Sponsors</p>
-  		</div>
-  		<div class="col-md-2">
-  		</div>
-  	</div>
-  </div>
 
+	  <%= yield %>
+
+	  <footer>
+		  <div class="footer">
+		  	<div class="row">
+		  		<div class="col-md-2">
+		  		</div>
+		  		<div class="col-md-3">
+		  			<p>Contact us</p>
+		  		</div>
+		  		<div class="col-md-3">
+		  			<p>Sponsors</p>
+		  		</div>
+		  		<div class="col-md-2">
+		  		</div>
+		  	</div>
+		  </div>
+	  </footer>
+  </body>
 </html>
