--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th>Blog entry</th>
+      <th>Blog Post</th>
       <th>User</th>
       <th colspan="3"></th>
     </tr>
@@ -16,8 +16,8 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.title %></td>
-        <td><%= post.blog_entry %></td>
-        <td><%= post.user_id %></td>
+        <td><%= post.blog_entry.html_safe %></td>
+        <td><%= post.user.username %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
