--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,24 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+<h1 class="blog-title"><%= @post.title %></h1>
+<h3 class="byline">by <%= @post.user.username %> <%= image_tag @post.user.avatar.thumb %></h3>
 
-<p>
-  <strong>Blog entry:</strong>
-  <%= @post.blog_entry %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @post.user_id %>
+<p class="blog-post">
+  <%= @post.blog_entry.html_safe %>
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+
+<div class="comments">
+<%= render 'comments/form', comment: @comment %>
+
+<h2 class="comments">Comments</h2>
+	<% @post.comments.each do |comment| %>
+	<div class="well">
+		<p><%= comment.user.username %><%= image_tag @comment.user.avatar.thumb %></p>
+		<p><%= comment.comment_entry.html_safe %></p>
+	</div>
+	<% end %>
+</div>
+
