--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,11 @@
 @import 'bootstrap';
 @import 'font-awesome';
 
+body { 
+	padding-top: 25px; 
+	padding-bottom: 25px;
+}
+
 .footer {
 	background-color: Black;
 	color: White;
