--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :comment_entry %>
+    <%= form.label :comment_entry, 'New Comment:' %>
     <%= form.text_area :comment_entry, id: :comment_comment_entry, class: "form-control" %>
   </div>
 
