--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
   <body>
 		<!-- Nav Bar -->
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default navbar-fixed-top">
 		  <div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
@@ -51,9 +51,10 @@
 		          <% end %>
 		          <%= current_user.username %> <span class="caret"></span></a>
 		          <ul class="dropdown-menu">
-		            <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-		            <li>Submit Blog</li>
-		            <li>Configure Feed</li>
+		            <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+		            <li><%= link_to 'Write a New Post', new_post_path %></li>
+		            <li>'Your Posts'</li>
+		            <li>'Configure Feed'</li>
 		            <li role="separator" class="divider"></li>
 		            <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
 		          </ul>
